--- a/app/views/Application/ajouterTacheForm.html
+++ b/app/views/Application/ajouterTacheForm.html
@@ -5,5 +5,6 @@
 
 #{form @ajouterTache(), enctype:'multipart/form-data'}
     <input type="text" name="tache.title">
+    <input type="datetime-local" name="tache.time">
     <input type="submit" name="submit" value="Create">
 #{/form}
